# cpi_test

app/app/src/: App.js  myidl.json
mysolanaapp/: Anchor.toml  package.json
mysolanaapp/app/: package-lock.json  package.json
mysolanaapp/app/src/: idl.json
mysolanaapp/programs/puppet/: Cargo.toml
mysolanaapp/programs/puppet/src/: lib.rs
mysolanaapp_caller/: deployerwallet.json  package-lock.json
mysolanaapp_caller/app/src/: App.js
mysolanaapp_caller/programs/puppet-master/: Cargo.toml
mysolanaapp_caller/programs/puppet-master/src/: lib.rs
