[package]
name = "puppet-master"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "puppet_master"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.23.0"
puppet = { path = "/home/user/myWorkspace/cpi_test/mysolanaapp/programs/puppet/", features = ["cpi"] }
